# storaged

./: .gitignore  HACKING  README  configure.ac
data/: Makefile.am  com.redhat.storaged.service.in  storaged.service.in
doc/man/: Makefile.am  storaged.xml.in
src/: Makefile.am  daemon.c  helper.c  invocation.c  manager.c  udisksclient.c  udisksclient.h  volumegroup.c
src/tests/: Makefile.am  test-jobs.c
